<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">


    <TextView
        android:id="@+id/login_tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carter_one"
        android:text="SALUDABLE APP"
        android:textAlignment="center"
        android:textColor="@color/verde_2"
        android:textSize="40dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="Usuario"
        app:startIconContentDescription="Icono lineas"
        app:startIconDrawable="@drawable/ic_usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="Contraseña"
        app:endIconMode="password_toggle"
        app:startIconContentDescription="Icono lineas"
        app:startIconDrawable="@drawable/ic_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ingresar" />

        <Button
            android:id="@+id/login_btn_registarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Registrarse" />

    </LinearLayout>

        <TextView
            android:id="@+id/tv_login_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="35dp"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/frg_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>